--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,12 +9,13 @@
     <div class="user d-flex justify-content-center" style="height: 80vh;">
         <user-apps [user]="user"></user-apps>
     </div>
-    <!-- Panel Card -->
+    <!-- Panel Button Route -->
     <div class="page d-flex justify-content-center" style="height: auto;">
         <div class="card-choose">
-            TEST C
+            <button-card class="w-100"></button-card>
         </div>
     </div>
+    <!-- Card Logout -->
     <div class="input d-flex justify-content-center" style="height: auto;">
         <div mat-button class="card-button d-flex align-items-center font-weight-bold" (click)="logout()">
             <mat-icon>logout</mat-icon>
