--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,10 @@ body {
   background-size: cover;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .image-container {
   height: 100%;
   background-attachment: fixed;
@@ -162,4 +166,38 @@ body {
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
+}
+
+.btn-option {
+  /* timeline */
+  /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 10px;
+  width: 100%;
+  height: 100%;
+  /* Dark Blue */
+  background: #045b62;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  /* Inside auto layout */
+  line-height: 0px !important;
+  color: white;
+}
+
+.btn-unoption {
+  /* white */
+  background: #ffffff;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  gap: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.text-custom-general {
+  color: #045b62;
 }
