--- a/src/app/main/pages/tables/tables.component.css
+++ b/src/app/main/pages/tables/tables.component.css
@@ -1,3 +1,7 @@
+.container-table {
+  height: 100vh;
+  overflow: hidden;
+}
 .btn-back {
   background: #ffffff;
   box-shadow: 0px 4px 20px rgb(0 0 0 / 5%);
@@ -11,6 +15,10 @@
   max-height: 100vh;
   overflow: auto;
   background: #fff;
+}
+
+.r-container {
+  height: 100vh;
 }
 
 .side {
@@ -96,4 +104,15 @@ h2 {
   width: 100%;
   min-width: 200px;
   height: 100%;
+}
+
+.center-empty {
+  margin: auto;
+  height: auto;
+  padding: 10px;
+  padding: 10%;
+  position: relative;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
