--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,13 @@ html {
 
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
+  max-width: 1024px;
+  max-height: 728;
+
+  /* Centers the class */
+  margin-left: auto;
+  margin-right: auto;
 }
 body {
   margin: 0;
@@ -214,4 +220,27 @@ body {
 
 .text-custom-general {
   color: #045b62;
+}
+
+/* MAT DRAWER SIDENAV */
+
+.mat-drawer-order {
+  width: 100%;
+  height: 100vh;
+}
+
+.mat-drawer {
+  width: 10%;
+}
+
+.logo-small {
+  width: 100%;
+  padding: 20px;
+}
+
+.search-input {
+  padding: 0px;
+  background-color: white;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
 }
