--- a/src/styles.css
+++ b/src/styles.css
@@ -244,3 +244,19 @@ body {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
   border-radius: 4px;
 }
+
+.h-inherit {
+  height: inherit;
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.sticky {
+  background-color: #c0c0c0;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
